hmac, base64 version kinda works, normal one doesn't
