# api/apispec.yaml
@@ -49,7 +49,7 @@ paths:
         - user
   '/user/{username}/tracks/loved':
     get:
-      description: Get loved tracks of specified User - https://www.last.fm/api/show/user.getLovedTracks
+      description: 'Get loved tracks of specified User - https://www.last.fm/api/show/user.getLovedTracks'
       security:
         - defaultApiKey: []
       parameters:
@@ -164,12 +164,14 @@ paths:
       x-stoplight:
         id: r4nu8mvgwcbbf
       description: equivalent to calling recent with limit of 1
-  /hmac/sign:
-    get:
+  /hmac/sign/base64:
+    post:
       summary: sign a request
       tags:
         - hmac
-      responses: {}
+      responses:
+        200:
+          description: "successfully signed"
       operationId: post-hmac-sign
       x-stoplight:
         id: 1hthsq5tpk5xi
@@ -180,17 +182,66 @@ paths:
           name: HMAC-PSK
           description: HMAC Pre-Shared-Key
           required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HmacProxyRequest'
+      security: [ ]
+  /hmac/sign:
+    post:
+      summary: sign a request
+      tags:
+        - hmac
+      responses:
+        200:
+          description: "successfully signed"
+      operationId: post-hmac-sign
+      x-stoplight:
+        id: 1hthsq5tpk5xi
+      parameters:
         - schema:
             type: string
-          in: query
-          name: request
+          in: header
+          name: HMAC-PSK
+          description: HMAC Pre-Shared-Key
           required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HmacProxyRequest'
+      security: []
   /hmac/verify:
-    head:
+    post:
       summary: verify a hmac signed method
       tags:
         - hmac
       responses: {}
+      operationId: get-hmac-verify
+      x-stoplight:
+        id: rrb5zs04683wq
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignedRequest'
+      parameters:
+        - schema:
+            type: string
+          in: header
+          name: HMAC-PSK
+          required: true
+      security: []
+  /hmac/verify/base64:
+    post:
+      summary: verify a hmac signed method
+      tags:
+        - hmac
+      responses: { }
       operationId: get-hmac-verify
       x-stoplight:
         id: rrb5zs04683wq
@@ -200,16 +251,87 @@ paths:
           in: header
           name: HMAC-PSK
           required: true
-        - schema:
-            type: string
-          in: query
-          name: signature
-          required: true
-        - schema:
-            type: string
-          in: query
-          name: request
-          required: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignedBase64Request'
+      security: [ ]
+  /hmac/verify/againstServer:
+    post:
+      summary: Execute a signed HMAC proxy request
+      tags:
+        - hmac
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignedRequest'
+      responses:
+        '200':
+          description: Proxy request succeeded
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProxyResponse'
+        '400':
+          description: Bad input or invalid JSON
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        '403':
+          description: Invalid signature or not authorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+      security: []
+  /hmac/execute:
+    post:
+      summary: Execute a signed HMAC proxy request
+      tags:
+        - hmac
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignedRequest'
+      responses:
+        '200':
+          description: Proxy request succeeded
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HmacProxyResponse'
+        '400':
+          description: Bad input or invalid JSON
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        '403':
+          description: Invalid signature or not authorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiError'
+      security: []
 security:
   - defaultApiKey: []
 components:
@@ -220,6 +342,76 @@ components:
       name: Authorization
       in: header
   schemas:
+    ApiErrorCode:
+      type: number
+      enum:
+        - 0
+        - 1
+        - 2
+        - 3
+    ApiError:
+      type: object
+      properties:
+        http_code:
+          type: number
+          example: 403
+        internal_error_code:
+          type: number
+          example: 1
+        success:
+          type: boolean
+          example: false
+        message:
+          type: string
+          example: Invalid HMAC signature
+      required:
+        - success
+        - message
+    HmacProxyResponse:
+      type: object
+    HmacProxyRequest:
+      type: object
+      properties:
+        method:
+          type: string
+          example: GET
+        api_identifier:
+          type: string
+          example: /user/
+        api_parameters:
+          type: object
+          properties:
+            username:
+              type: string
+              example: alice
+        body:
+          type: string
+          nullable: true
+      required:
+        - method
+        - url
+    SignedRequest:
+      type: object
+      properties:
+        signature:
+          type: string
+          example: 4acfb7f8b2...
+        request:
+          $ref: '#/components/schemas/HmacProxyRequest'
+      required:
+        - signature
+        - request
+    SignedBase64Request:
+      type: object
+      properties:
+        signature:
+          type: string
+          example: 4acfb7f8b2...
+        request:
+          type: string
+      required:
+        - signature
+        - request
     userinfo:
       description: the User Info
       properties:
