# internal/pkg/server/apikey_undefined.go
@@ -1,12 +1,17 @@
 package server
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/dozro/tawny/internal/pkg/apiError"
+	"github.com/gin-gonic/gin"
+)
 
 func apikeyUndefined(apikey string, c *gin.Context) bool {
 	if apikey == "" {
-		c.JSON(401, gin.H{
-			"code":  401,
-			"error": "apikey undefined",
+		c.JSON(401, apiError.ApiError{
+			HttpCode:          401,
+			InternalErrorCode: apiError.MissingApiKeyInRequest,
+			Message:           "apikey is required",
+			Success:           false,
 		})
 		return true
 	}
