# internal/pkg/server/hmac.go
@@ -4,8 +4,14 @@ import (
 	"crypto/hmac"
 	"crypto/sha256"
 	"encoding/hex"
+	"encoding/json"
+	"errors"
+	"io"
+	"net/http"
 
+	"github.com/dozro/tawny/internal/pkg/apiError"
 	"github.com/gin-gonic/gin"
+	log "github.com/sirupsen/logrus"
 )
 
 func generateHMAC(secret, message string) string {
@@ -29,28 +35,73 @@ func verifyHMAC(secret, message, receivedSig string) bool {
 
 	return hmac.Equal(expectedMAC, receivedMAC)
 }
+func signBase64Request(c *gin.Context) {
+	psk := c.Request.Header.Get("HMAC-PSK") // For Testing purposes TO-DO
+	raw, err := io.ReadAll(c.Request.Body)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, apiError.ApiError{
+			HttpCode:          403,
+			InternalErrorCode: apiError.InvalidBody,
+			Message:           "invalid request body",
+			Success:           false,
+		})
+	}
 
+	signature := generateHMAC(psk, string(raw))
+
+	log.Debug("signing request")
+	log.Debugf("Message bytes: %s", raw)
+	log.Printf("Generated signature: %s", signature)
+
+	c.JSON(http.StatusOK, HmacBase64SignedRequest{
+		Signature: signature,
+		Request:   raw,
+	})
+}
 func signRequest(c *gin.Context) {
 	psk := c.Request.Header.Get("HMAC-PSK") // For Testing purposes TO-DO
-	request := c.Query("request")
 
-	signature := generateHMAC(psk, request)
+	raw, err := io.ReadAll(c.Request.Body)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, apiError.ApiError{
+			HttpCode:          403,
+			InternalErrorCode: apiError.InvalidBody,
+			Message:           "invalid request body",
+			Success:           false,
+		})
+	}
 
-	c.JSON(200, gin.H{
-		"signature": signature,
-		"signedFor": request,
-	})
+	signature := generateHMAC(psk, string(raw))
+
+	log.Debug("signing request")
+	log.Debugf("Message bytes: %s", raw)
+	log.Printf("Generated signature: %s", signature)
+
+	signedRequest := HmacSignedRequest{
+		Request:   raw,
+		Signature: signature,
+	}
+
+	c.JSON(200, signedRequest)
 }
 
 func verifyRequest(c *gin.Context) {
 	psk := c.Request.Header.Get("HMAC-PSK") // For Testing purposes TO-DO
-	signed := c.Query("signature")
-	request := c.Query("request")
-	isValid := verifyHMAC(psk, request, signed)
+	isValid, _, err, code := verifyRequestInternal(c, psk)
+	if err != nil {
+		c.JSON(code, apiError.ApiError{
+			HttpCode: code,
+			Message:  err.Error(),
+			Success:  false,
+		})
+		return
+	}
 	if !isValid {
-		c.JSON(403, gin.H{
-			"message": "Invalid HMAC signature",
-			"success": false,
+		c.JSON(403, apiError.ApiError{
+			HttpCode: 403,
+			Message:  "Invalid HMAC signature",
+			Data:     c.Request.Body,
+			Success:  false,
 		})
 		return
 	} else {
@@ -60,4 +111,114 @@ func verifyRequest(c *gin.Context) {
 		})
 		return
 	}
+}
+
+func verifybase64Request(c *gin.Context) {
+	psk := c.Request.Header.Get("HMAC-PSK") // For Testing purposes TO-DO
+	var signedReq HmacBase64SignedRequest
+
+	if err := c.ShouldBindJSON(&signedReq); err != nil {
+		return
+	}
+
+	log.Debug("verifying signature")
+	log.Debugf("Received message bytes: %s", signedReq.Request)
+	log.Debugf("Received signature: %s", signedReq.Signature)
+
+	isValid := verifyHMAC(psk, string(signedReq.Request), signedReq.Signature)
+
+	if !isValid {
+		log.Debug("invalid signature")
+		log.Debugf("Signature: %s", signedReq.Signature)
+		log.Debugf("Signature should be: %s", generateHMAC(psk, string(signedReq.Request)))
+		c.JSON(403, apiError.ApiError{
+			HttpCode:          403,
+			Message:           "Invalid HMAC signature",
+			Data:              signedReq.Signature,
+			Success:           false,
+			InternalErrorCode: apiError.InvalidHMAC,
+		})
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"message": "Valid HMAC signature",
+		"success": true,
+	})
+	return
+}
+
+func verifyAgainstServerSecret(c *gin.Context) {
+
+	isValid, _, err, code := verifyRequestInternal(c, proxyConfig.HmacSecret)
+	if err != nil {
+		c.JSON(code, apiError.ApiError{
+			HttpCode: code,
+			Message:  err.Error(),
+			Success:  false,
+		})
+	}
+	if !isValid {
+		c.JSON(403, apiError.ApiError{
+			HttpCode: 403,
+			Message:  "Invalid HMAC signature",
+			Success:  false,
+		})
+		return
+	} else {
+		c.JSON(200, gin.H{
+			"message": "Valid HMAC signature",
+			"success": true,
+		})
+		return
+	}
+}
+
+// verifyRequestInternal internal code for hmac request verification
+func verifyRequestInternal(c *gin.Context, hmacSecret string) (bool, *HmacProxyRequest, error, int) {
+	var signedReq HmacSignedRequest
+
+	if err := c.ShouldBindJSON(&signedReq); err != nil {
+		return false, nil, errors.New("invalid JSON"), http.StatusBadRequest
+	}
+
+	log.Debug("verifying signature")
+	log.Debugf("Received message bytes: %s", signedReq.Request)
+	log.Debugf("Received signature: %s", signedReq.Signature)
+
+	isValid := verifyHMAC(hmacSecret, string(signedReq.Request), signedReq.Signature)
+
+	if !isValid {
+		log.Debug("invalid signature")
+		log.Debugf("Signature: %s", signedReq.Signature)
+		log.Debugf("Signature should be: %s", generateHMAC(hmacSecret, string(signedReq.Request)))
+		return false, nil, errors.New("invalid HMAC signature"), http.StatusForbidden
+	}
+
+	var req HmacProxyRequest
+	if err := json.Unmarshal(signedReq.Request, &req); err != nil {
+		return false, nil, err, http.StatusBadRequest
+	}
+
+	return true, &req, nil, http.StatusOK
+}
+
+func executeSignedRequest(c *gin.Context) {
+	isValid, req, err, code := verifyRequestInternal(c, proxyConfig.HmacSecret)
+	if err != nil {
+		c.JSON(code, apiError.ApiError{
+			HttpCode: code,
+			Message:  err.Error(),
+			Success:  false,
+		})
+	}
+	if !isValid {
+		c.JSON(403, apiError.ApiError{
+			HttpCode: 403,
+			Message:  "Invalid HMAC signature",
+			Success:  false,
+		})
+	}
+
+	performProxyAction(req, c)
 }
